--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,9 @@ version: 2
 jobs:
   build:
     working_directory: /temp
+    machine:
+      image: circleci/classic:201708-01
     docker:
-      - image: docker:17.05.0-ce-git
       - image: microsoft/aspnetcore-build
     environment:
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
