--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,6 @@ version: 2
 jobs:
   build:
     working_directory: /temp
-    machine:
-      image: circleci/classic:201708-01
     docker:
       - image: microsoft/aspnetcore-build
     environment:
@@ -13,17 +11,21 @@ jobs:
       - checkout
       - run: dotnet restore
       - run: dotnet build
+  test:
+    docker:
+      - image: docker:17.05.0-ce-git
+    steps:
       - run:
-          name: Build docker image
-          command: |
-            docker build -t guillermocorrea/dockerdemo .
+        name: Build docker image
+        command: |
+          docker build -t guillermocorrea/dockerdemo .
       - run:
-          name: Test docker image
-          command: |
-            docker run -d -p 9200:9200 guillermocorrea/dockerdemo; sleep 10
-            curl --retry 10 --retry-delay 5 -v http://localhost:9200
+        name: Test docker image
+        command: |
+          docker run -d -p 9200:9200 guillermocorrea/dockerdemo; sleep 10
+          curl --retry 10 --retry-delay 5 -v http://localhost:9200
       - run:
-          name: Publish docker image
-          command: |
-            docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-            docker push guillermocorrea/dockerdemo
+        name: Publish docker image
+        command: |
+          docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+          docker push guillermocorrea/dockerdemo
