--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,11 @@ jobs:
         command: |
           docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
           docker push guillermocorrea/dockerdemo
+workflows:
+  version: 2
+    build-test-and-deploy:
+      jobs:
+        - build
+        - test:
+          requires:
+            - build
