--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ jobs:
           docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
           docker push guillermocorrea/dockerdemo
 
-workflows:
-  version: 2
-    build-and-test:
-      jobs:
-        - build
-        - test:
-          requires:
-            - build
+#workflows:
+#  version: 2
+#    build-and-test:
+#      jobs:
+#        - build
+#        - test:
+#          requires:
+#            - build
