--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.0
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
       - run: dotnet restore
       - run: dotnet build
 
-  test:
+  deploy:
     docker:
       - image: docker:17.05.0-ce-git
     steps:
@@ -32,11 +32,11 @@ jobs:
           docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
           docker push guillermocorrea/dockerdemo
 
-#workflows:
-#  version: 2
-#    build-and-test:
-#      jobs:
-#        - build
-#        - test:
-#          requires:
-#            - build
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
