--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,19 @@ jobs:
       - checkout
       - run: dotnet restore
       - run: dotnet build
-      - setup_remote_docker:
-          version: 17.05.0-ce
+      - setup_remote_docker:   # (2)
+          docker_layer_caching: true # (3)
+
+      # use a primary image that already has Docker (recommended)
+      # or install it during a build like we do here
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       - run:
           name: Build docker image
           command: |
